# chemsynthcalc

./: .gitignore  .readthedocs.yaml  404.html  CSC_formula_test.json  CSC_formula_test.txt  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  p.gitignore  paper.bib  paper.md  periodic_table.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml  todo.md
.github/workflows/: ci.yml  draft-pdf.yml
API/: index.html
ChemicalFormula/: index.html
ChemicalReaction/: index.html
bench/: chemical_formula_benchmark.py  chemical_reaction_benchmark.py  out.txt  text_mined_reactions.txt
contacts/: index.html
data/: chemical_formula_benchmark.py  database_reactions.py  text_mined_output.txt  text_mined_reactions.csv
docs/: .buildinfo  API.html  API.md  ChemicalFormula.md  ChemicalReaction.md  License.md  chemical_formula.html  chemical_reaction.html  chemsynthcalc.html  contacts.html  contacts.md  genindex.html  index.html  index.md  installation.html  installation.md  licence.html  license.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  usage.html  usage.md
docs/.doctrees/: API.doctree  chemical_formula.doctree  chemical_reaction.doctree  chemsynthcalc.doctree  contacts.doctree  environment.pickle  index.doctree  installation.doctree  licence.doctree  license.doctree  usage.doctree
docs/_sources/: API.rst.txt  chemical_formula.rst.txt  chemical_reaction.rst.txt  (+4 more)
docsrc/: make.bat
installation/: index.html
paper/: paper.md
search/: search_index.json
src/: __init__.py  calculate_mass.py  chemical_formula.py  chemical_reaction.py  chemutils.py  formula_parser.py  molar_mass.py  periodic_table.py  reaction_balance.py  reaction_matrix.py
test/: allowed_mined_reactions.csv  database_reactions.py  final_final_mined_reactions.csv  final_mined_reactions.csv  mod_mined_reactions.csv  new.py  new_comb.py  not_test.py  not_test2.py  not_test3.py  test_ChemicalFormula.py  test_ChemicalReaction.py  testing_reactions.csv
tests/: database_reactions.py  mod_mined_reactions.csv  new_comb.py  test.py  test2.py  test3.py  test_ChemicalReaction.py  test_balancer.py  test_chem_output.py  test_chemical_formula.py  test_chemical_reaction.py  test_coefs.py  test_formula_parser.py  test_formula_validator.py  test_molar_mass.py  test_reaction_decomposer.py  test_reaction_validator.py  test_utils.py  testing_reactions.csv
usage/: index.html
(+40 files in other folders)
