[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemsynthcalc"
version = "1.0.8"
authors = [
  { name="Egor Syrov", email="syrov@unn.ru" },
]
description = "Python package for calculating the masses of substances required for chemical synthesis directly from the reaction string. It includes solutions for all intermidiate steps, including chemical formula parsing, molar mass calculation and reaction balancing with different matrix methods."
readme = "README.md"
license = "MIT"
dependencies = [
  "scipy>=1.8"
]

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

